# python-template

./: .envrc  .gitignore  .pre-commit-config.yaml  .vale.ini  CONTRIBUTING.md  LICENCE.md  LICENCE.txt  LICENSE.md  MANIFEST.in  README.md  index.html  pyproject.toml  renovate.json  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  documentation.md  feature_request.md  question.md  question.yaml
.github/workflows/: add-to-project.yaml  checks.yml  deploy.yaml  deploy.yml  documentation.yaml  documentation.yml  examples.yml  licence.yaml  licence.yml  links.yaml  linting.yaml  linting.yml  test.yaml  test.yml  tests.yml
documentation/: DOCUMENTATION.md
src/example/: __init__.py
src/example_package/: __init__.py
tests/: __init__.py  test_example.py
utils/: index.html  logger.html
